# myobs

./: CMakeLists.txt
GbyxSetup/: GbyxSetup.vdproj
UI/: CMakeLists.txt  api-interface.cpp  audio-encoders.hpp  display-helpers.hpp  multitrack-video-output.hpp  mute-checkbox.hpp  obs-app-theming.cpp  obs-app.cpp  obs-app.hpp  window-basic-auto-config.cpp  window-basic-filters.cpp  window-basic-main-dropfiles.cpp  window-basic-main-gbs.cpp  window-basic-main-profiles.cpp  window-basic-main-scene-collections.cpp  window-basic-main.cpp  window-basic-main.hpp  window-basic-preview.cpp  window-basic-settings-appearance.cpp  window-basic-settings-gbs.cpp  window-basic-settings.cpp  window-basic-settings.hpp  window-basic-source-select.cpp  window-extra-browsers.cpp  window-projector.cpp
UI/cmake/: os-windows.cmake  ui-qt.cmake  ui-windows.cmake
UI/data/locale/: zh-CN.ini
UI/data/themes/: System.obt  Yami.obt  Yami_Light.ovt
UI/forms/: OBSBasic.ui  OBSBasicSettings.ui  obs.qrc
UI/gbs/: CMakeLists.txt  CMakeLists.txt.KsHbeK  GBSAsioHttpServer.cpp  GBSAsioHttpServer.h  GBSAuthorizedCodeForm.cpp  GBSAuthorizedCodeForm.h  GBSAuthorizedCodeForm.ui  GBSBasic.ui  GBSBasicWindow.cpp  GBSBasicWindow.h  GBSBasicWindow.ui  GBSDanmaType.h  GBSHttpsServer.cpp  GBSHttpsServer.h  GBSLogin.cpp  GBSLogin.h  GBSLogin.ui  GBSMainBizWindow.cpp  GBSMainBizWindow.h  GBSMainBizWindow.ui  GBSMainCollector.cpp  GBSMainCollector.h  GBSMainForm.cpp  GBSMainForm.h  GBSMainForm.ui  GBSMainProfile.cpp  GBSMainProfile.h  GBSMainProfile.ui  GBSMainWindow.cpp  GBSMainWindow.h  GBSMainWindow.ui  GBSNormalLoginForm.cpp  GBSNormalLoginForm.h  GBSNormalLoginForm.ui  GBSQRCodeLoginForm.cpp  GBSQRCodeLoginForm.h  GBSQRCodeLoginForm.ui  GBSRegisterForm.cpp  GBSRegisterForm.h  GBSRegisterForm.ui  (+9 more)
UI/gbs/bizWidgets/: GBSActivateDevice.cpp  GBSActivateDevice.h  GBSActivateDevice.ui  GBSAddBroker.cpp  GBSAddBroker.h  GBSAddBroker.ui  GBSAddConsumer.cpp  GBSAddConsumer.h  GBSAddConsumer.ui  GBSBizAIData.cpp  GBSBizAIData.h  GBSBizAIData.ui  GBSBizDeviceInfo.cpp  GBSBizDeviceInfo.h  GBSBizDeviceInfo.ui  GBSBizEShopData.cpp  GBSBizEShopData.h  GBSBizEShopData.ui  GBSBizLiveBridger.cpp  GBSBizLiveBridger.h  GBSBizLiveBridger.ui  GBSBizLiveBroker.cpp  GBSBizLiveBroker.h  GBSBizLiveBroker.ui  GBSBizLiveDanmaku.cpp  GBSBizLiveDanmaku.h  GBSBizLiveDanmaku.ui  GBSBizLiveGuarder.cpp  GBSBizLiveGuarder.h  GBSBizLiveGuarder.ui  GBSBizLiveGuarderAuth.cpp  GBSBizLiveGuarderAuth.h  GBSBizLiveGuarderAuth.ui  GBSBizLiveGuarderCtrl.cpp  GBSBizLiveGuarderCtrl.h  GBSBizLiveGuarderCtrl.ui  GBSBizLivePusher.cpp  GBSBizLivePusher.h  GBSBizLivePusher.ui  GBSBizLivePusherAuth.cpp  (+53 more)
UI/gbs/codec/: GBSAACEncoder.cpp  GBSAACEncoder.h  GBSAudioCodec.h  GBSOpusDecoder.cpp  GBSOpusDecoder.h  GBSOpusEncoder.cpp  GBSOpusEncoder.h
UI/gbs/common/: AESPasswordProtecter.h  CountdownDialog.h  DanmakuWidget.h  DoubleTextButton.h  EllipticalSlider.h  EllipticalSliderExt.h  FatButton.h  FileIOUtils.cpp  FileIOUtils.h  GBSHttpClient.cpp  GBSHttpClient.h  HoriNaviButton.h  PlayerProgressBar.h  QBizLogger.cpp  QBizLogger.h  QHttpDownloader.h  QIniFile.h  QToast.h  SelectedIDSDialog.h  ShadowWidget.h  SystemUtils.h  ToggleButton.h  VertNaviButton.h  VertNaviButtonExt.h  VolumeHBarWidget.h  WebSocketClient.cpp  WebSocketClient.h  XORPasswordProtecter.h
UI/gbs/dto/: GBSBundleData.cpp  GBSBundleData.h  GBSLiveAccountInfo.cpp  GBSLiveAccountInfo.h  GBSLiveDevices.cpp  GBSLiveDevices.h  GBSLiveTranscribe.cpp  GBSLiveTranscribe.h  GBSMemberInfo.cpp  GBSMemberInfo.h  GBSPushStreamInfo.cpp  GBSPushStreamInfo.h  GBSQrCodeResponse.cpp  GBSQrCodeResponse.h  GBSRoomInfo.cpp  GBSRoomInfo.h  GBSUserInfo.cpp  GBSUserInfo.h
UI/gbs/media/: GBSAudioReader.cpp  GBSAudioReader.h  GBSAudioResampler.h  GBSAudioResampler2.h  GBSAudioWriter.cpp  GBSAudioWriter.h
UI/gbs/naviWidgets/: GBSNaviAI.cpp  GBSNaviAI.h  GBSNaviAI.ui  GBSNaviData.cpp  GBSNaviData.h  GBSNaviData.ui  GBSNaviLive.cpp  GBSNaviLive.h  GBSNaviLive.ui  GBSNaviProduct.cpp  GBSNaviProduct.h  GBSNaviProduct.ui  GBSNaviSetting.cpp  GBSNaviSetting.h  GBSNaviSetting.ui  GBSNaviTranslate.cpp  GBSNaviTranslate.h  GBSNaviTranslate.ui
UI/gbs/testUI/: DanmakuWidget.h  TestVertNaviButton.h  TestVolumeHBarWidget.h  testPlayerProgressBar.h  testToggleButton.h  testVertNaviButton.cpp  testdanmakuwidget.h  testdanmakuwidget.ui
UI/gbs/updater/: GBSFileDownloader.cpp  GBSFileDownloader.h  GBSXMLParser.cpp  GBSXMLParser.h
UI/gbs/updater/winhttp/: TLBufferVector.cpp  TLBufferVector.h  TLDownloadTask.cpp  TLDownloadTask.h  TLWebDef.h  TLWinHttpDownloader.cpp  TLWinHttpDownloader.h
UI/gbs/utils/: TaskExecutor.h
UI/update/: shared-update.cpp  win-update-gbs.cpp  win-update-gbs.hpp  win-update.cpp
docs/: issues.md
libobs/: CMakeLists.txt  obs-module.c
plugins/: CMakeLists.txt
plugins/obs-rtspserver/: README.md  README_de-DE.md  README_es-ES.md  README_fr-FR.md  README_it-IT.md  README_ja-JP.md  README_ko-KR.md  README_nl-NL.md  README_ru-RU.md  README_zh-CN.md  README_zh-TW.md
plugins/obs-rtspserver/installer/locale/: it-IT.nsi
plugins/obs-rtspserver/rtsp-server/: CMakeLists.txt
plugins/rtc-source/: CMakeLists.txt  rtc-source.c  rtc-source.h
plugins/rtc-source/cmake/windows/: obs-module.rc.in
plugins/udp-input-source/: udp-input-source.c  udp-sender.c
plugins/vlc-video/: vlc-video-plugin.c
shared/http-server/: CMakeLists.txt  fullchain.pem  httpsserver.py  httptest.py  mongoose.c  mongoose.h  privkey.pem
shared/http-util/: CMakeLists.txt
shared/properties-view/: properties-view.cpp
shared/websocket-client/: CMakeLists.txt  QWebSocketClient.cpp  QWebSocketClient.h
shared/zego-rtc/: ZegoRTCEngine.cpp  ZegoRTCEngine.h
